try to fix horizontal scroll

--- a/mobile-style.css
+++ b/mobile-style.css
@@ -10,7 +10,7 @@ body {
 }
 
 html {
-  scroll-behavior: smooth;
+  max-width: 100%;
 }
 
 .sidebar {
